Add pages restos

--- a/html/resto_delice.html
+++ b/html/resto_delice.html
@@ -2,12 +2,11 @@
 <!-- By C.C. -->
 <html lang="Fr">
     <head>
-        <title>La palette du gout</title>
+        <title>Le délice des sens</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="../css/style.css" />
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body>
         <header>           
@@ -18,15 +17,14 @@
                 <img src="../images/logo/ohmyfood.png" alt="logo">
             </div>
             <div>
-                <img class="menu__img" src="../images/restaurants/palette.jpg" alt="parc">
+                <img class="menu__img" src="../images/restaurants/delice.jpg" alt="parc">
             </div>
         </header>    
         <main>
             
             <div class="menu">
-                <div class="menu__name">
-                    <h2>La Palette du goût</h2>
-                    <span class="material-icons base">favorite_border</span>
+                <div class="menu__title">
+                    <h2>Le délice des sens</h2>
                 </div>
                 <div class="dish-box">
                     <div class="dish">
@@ -38,8 +36,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Fricassée d'escargot</strong></p> 
-                                            <p>Au piment d'Espelette</p>
+                                        <p><strong>Tartare de thon</strong></p> 
+                                            <p>Assaisonné au yuzu</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>25€</b></span>
@@ -51,8 +49,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Foie gras de canard mi-cuit</strong></p> 
-                                            <p>Et ses copeaux de truffe noire</p>
+                                        <p><strong>Bouchée de homard croustillant</strong></p> 
+                                            <p>Et sa farandole de petits légumes</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>35€</b></span>
@@ -64,8 +62,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Oeuf au plat</strong></p> 
-                                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                                        <p><strong>Velouté de cèpes</strong></p> 
+                                            <p>Aux truffes</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>20€</b></span>
@@ -83,8 +81,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Filet de boeuf aux herbes</strong></p> 
-                                            <p>Accompagné de sa ribambelle de légumes</p>
+                                        <p><strong>Poulet rôti aux herbes de Provence</strong></p> 
+                                            <p>Et sa crème de truffe</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>40€</b></span>
@@ -96,8 +94,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Parmentier de queue de boeuf</strong></p> 
-                                            <p>À la truffe noire sur sa purée de panais</p>
+                                        <p><strong>Langouste rôtie</strong></p> 
+                                            <p>Et ses légumes de saison</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>35€</b></span>
@@ -109,8 +107,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Filet de turbot</strong></p> 
-                                            <p>Aux agrumes</p>
+                                        <p><strong>Côte de boeuf Angus</strong></p> 
+                                            <p>Et sa purée de panais</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>44€</b></span>
@@ -127,8 +125,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Paris-Brest</strong></p> 
-                                            <p>Revisité</p>
+                                        <p><strong>Farandole de desserts</strong></p> 
+                                            <p>Du chef</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>18€</b></span>
@@ -140,8 +138,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Macaron au chocolat d'exception</strong></p> 
-                                            <p>Et glace à la vanille de Madagascar</p>
+                                        <p><strong>Crème brulée</strong></p> 
+                                            <p>Revisitée</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>22€</b></span>
@@ -153,8 +151,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Mousse au chocolat</strong></p> 
-                                            <p>Au piment d'Espelette et à la truffe noire</p>
+                                        <p><strong>Tiramisu</strong></p> 
+                                            <p>À la noisette</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>23€</b></span>
