--- a/html/resto_note.html
+++ b/html/resto_note.html
@@ -2,12 +2,11 @@
 <!-- By C.C. -->
 <html lang="Fr">
     <head>
-        <title>La palette du gout</title>
+        <title>La note enchantée</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="../css/style.css" />
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body>
         <header>           
@@ -18,15 +17,14 @@
                 <img src="../images/logo/ohmyfood.png" alt="logo">
             </div>
             <div>
-                <img class="menu__img" src="../images/restaurants/palette.jpg" alt="parc">
+                <img class="menu__img" src="../images/restaurants/note.jpg" alt="parc">
             </div>
         </header>    
         <main>
             
             <div class="menu">
-                <div class="menu__name">
-                    <h2>La Palette du goût</h2>
-                    <span class="material-icons base">favorite_border</span>
+                <div class="menu__title">
+                    <h2>La note enchantée</h2>
                 </div>
                 <div class="dish-box">
                     <div class="dish">
@@ -38,8 +36,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Fricassée d'escargot</strong></p> 
-                                            <p>Au piment d'Espelette</p>
+                                        <p><strong>Ravioles de foie gras</strong></p> 
+                                            <p>Accompagnés de leur crème à la truffe</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>25€</b></span>
@@ -51,8 +49,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Foie gras de canard mi-cuit</strong></p> 
-                                            <p>Et ses copeaux de truffe noire</p>
+                                        <p><strong>Caviar osciètre</strong></p> 
+                                            <p>Sur blini à la farine de blé noir</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>35€</b></span>
@@ -64,11 +62,24 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Oeuf au plat</strong></p> 
-                                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                                        <p><strong>Homard et espuma de potiron</strong></p> 
+                                            <p>Mariné aux zestes d'orange</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>20€</b></span>
+                                    </div>
+                                </div>
+                            </div>   
+                        </div>
+                        <div class="menu__box">
+                            <div class="card-menu">
+                                <div class="card-menu__description">
+                                    <div class="card-menu__txt">
+                                        <p><strong>Foie gras de canard cuit entier</strong></p> 
+                                            <p>Confiture de figue et pain toasté</p>
+                                    </div>           
+                                    <div class="card-menu__price">
+                                        <span ><b>35€</b></span>
                                     </div>
                                 </div>
                             </div>   
@@ -83,8 +94,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Filet de boeuf aux herbes</strong></p> 
-                                            <p>Accompagné de sa ribambelle de légumes</p>
+                                        <p><strong>Noix de coquilles Saint-Jacques</strong></p> 
+                                            <p>Sur lit de purée de céleri-rave</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>40€</b></span>
@@ -96,8 +107,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Parmentier de queue de boeuf</strong></p> 
-                                            <p>À la truffe noire sur sa purée de panais</p>
+                                        <p><strong>Langoustine poêlée</strong></p> 
+                                            <p>SPurée de patate douce</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>35€</b></span>
@@ -109,8 +120,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Filet de turbot</strong></p> 
-                                            <p>Aux agrumes</p>
+                                        <p><strong>Mijoté de queue de boeuf</strong></p> 
+                                            <p>Et riz sauvage aux zestes de citron</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>44€</b></span>
@@ -127,8 +138,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Paris-Brest</strong></p> 
-                                            <p>Revisité</p>
+                                        <p><strong>Macaron noisette et chocolat</strong></p> 
+                                            <p>Glace au caramel brun et sel de Guérande</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>18€</b></span>
@@ -140,8 +151,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Macaron au chocolat d'exception</strong></p> 
-                                            <p>Et glace à la vanille de Madagascar</p>
+                                        <p><strong>Baba au rhum revisité</strong></p> 
+                                            <p>Avec son coulis de citron</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>22€</b></span>
@@ -153,8 +164,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Mousse au chocolat</strong></p> 
-                                            <p>Au piment d'Espelette et à la truffe noire</p>
+                                        <p><strong>Tarte au citron meringuée</strong></p> 
+                                            <p>Déstructurée</p>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>23€</b></span>
